--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "fresh": "0.5.2",
     "merge-descriptors": "1.0.1",
     "methods": "~1.1.2",
+    "mongoose": "^5.4.3",
     "on-finished": "~2.3.0",
     "parseurl": "~1.3.2",
     "path-to-regexp": "0.1.7",
